# visual-stimuli-discovery

./: .gitignore  .gitmodules  LICENSE  README.md  generate.py
code/: CMakeLists.txt  README.md
code/cmake/: DefaultExecutable.cmake  DefaultLibrary.cmake  DefaultTest.cmake  macros.cmake
code/res/: CMakeLists.txt  config.toml
code/res/test/: page_with_text.tif  text.tif
code/src/exe/Evaluator/: main.cpp
code/src/exe/Finder/: main.cpp
code/src/exe/LogExplorer/: main.cpp
code/src/exe/Master/: main.cpp
code/src/exe/Preciser/: main.cpp
code/src/exe/Reader/: main.cpp
code/src/exe/Trainer/: main.cpp
code/src/exe/VideoWalker/: main.cpp
code/src/lib/Core/: Core.cpp  Core.hpp  Defines.hpp  Keyboard.cpp  Keyboard.hpp  Task.hpp  VisualChangeClassifier.cpp  VisualChangeClassifier.hpp  VisualDebug.cpp  VisualDebug.hpp
code/src/lib/Data/: Dataset.cpp  Dataset.hpp  InterUserState.cpp  InterUserState.hpp  IntraUserState.cpp  IntraUserState.hpp  Layer.cpp  Layer.hpp  LogDatum.hpp  LogImage.cpp  LogImage.hpp  Session.hpp  State.cpp  State.hpp
code/src/lib/Descriptor/: Histogram.cpp  Histogram.hpp  OCR.cpp  OCR.hpp
code/src/lib/Feature/: BagOfWords.cpp  BagOfWords.hpp  EdgeChangeFraction.cpp  EdgeChangeFraction.hpp  Feature.hpp  FeatureVector.cpp  FeatureVector.hpp  Histogram.cpp  Histogram.hpp  MSSIM.cpp  MSSIM.hpp  NGrams.cpp  NGrams.hpp  OpticalFlow.cpp  OpticalFlow.hpp  PSNR.cpp  PSNR.hpp  PixelDiff.cpp  PixelDiff.hpp  SiftMatch.cpp  SiftMatch.hpp
code/src/lib/Learn/: Classifier.hpp  DecisionTree.cpp  DecisionTree.hpp  Learn.cpp  Learn.hpp  RandomForest.cpp  RandomForest.hpp  SVM.cpp  SVM.hpp
code/src/lib/Stage/: Merging.cpp  Merging.hpp  Processing.cpp  Processing.hpp  Splitting.cpp  Splitting.hpp
code/src/lib/Stage/Merging/: Merger.cpp  Merger.hpp  Model.cpp  Model.hpp
code/src/lib/Stage/Processing/: Parser.cpp  Parser.hpp  Tuning.cpp  Tuning.hpp
code/src/lib/Stage/Splitting/: Cleaner.cpp  Cleaner.hpp  Model.cpp  Model.hpp  Splitter.cpp  Splitter.hpp
code/src/lib/Util/: Clusterer.cpp  Clusterer.hpp  LayerComparator.cpp  LayerComparator.hpp  LogDatesWalker.cpp  LogDatesWalker.hpp  OCREngine.cpp  OCREngine.hpp  Score.hpp
code/src/test/HelloTest/: CMakeLists.txt  main.cpp
tools/Notebooks/: DatacastAnalysis.ipynb  Evaluation-case-study.ipynb  Evaluation-examples.ipynb  Evaluation-overall.ipynb  Evaluation-quality.ipynb  ShotAnalysis.ipynb  VisualChange.ipynb  classifier.py
tools/Scripts/: BlindSearch.py  Visualization.py
